add_subdirectory(algo_diff_type)
add_subdirectory(basic_operations)
add_subdirectory(bernstein_polynomials)
add_subdirectory(bezier_group)
add_subdirectory(composition)
add_subdirectory(composition_group)
add_subdirectory(io)
add_subdirectory(mapping_test)
add_subdirectory(order_and_derivation)
add_subdirectory(point_test)
add_subdirectory(spline_splitting)
add_subdirectory(rational_splines)
